# construction-calculators

./: README.md  build.mjs  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts
python/: LICENSE  README.md  pyproject.toml
python/construction_calculators/: __init__.py  board_foot.py  concrete.py  concrete_block.py  concrete_slab.py  construction_cost.py  deck_cost.py  drywall.py  equipment_depreciation.py  fence.py  flooring.py  gravel.py  hourly_rate.py  insulation.py  labor_cost.py  markup.py  metal_roof_cost.py  net_profit.py  paint.py  paver.py  retaining_wall.py  roof.py  roof_pitch.py  roofing_cost.py  square_footage.py  stair.py  timeline.py
src/: board-foot.ts  concrete-block.ts  concrete-slab.ts  concrete.ts  construction-cost.ts  deck-cost.ts  drywall.ts  equipment-depreciation.ts  fence.ts  flooring.ts  gravel.ts  hourly-rate.ts  index.ts  insulation.ts  labor-cost.ts  markup.ts  metal-roof-cost.ts  net-profit.ts  paint.ts  paver.ts  retaining-wall.ts  roof-pitch.ts  roof.ts  roofing-cost.ts  square-footage.ts  stair.ts  timeline.ts
